--- a/api/core/pom.xml
+++ b/api/core/pom.xml
@@ -7,7 +7,9 @@
     <artifactId>api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
+  <groupId>org.leadisteam.leadisjourney</groupId>
   <artifactId>core</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
   <name>core</name>
   <url>http://maven.apache.org</url>
   <properties>
