--- a/api/rest/pom.xml
+++ b/api/rest/pom.xml
@@ -45,4 +45,19 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
+<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>org.leadisteam.leadisjourney.api.rest.App</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
