--- a/API/api/rest/pom.xml
+++ b/API/api/rest/pom.xml
@@ -22,5 +22,10 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+            <groupId>org.springframework.boot</groupId>
+             <version>1.2.6.RELEASE</version>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
   </dependencies>
 </project>
