--- a/API/api/rest/pom.xml
+++ b/API/api/rest/pom.xml
@@ -8,9 +8,7 @@
 		<artifactId>api</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>org.leadisteam.leadisjourney</groupId>
 	<artifactId>rest</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<name>rest</name>
 	<url>http://maven.apache.org</url>
 	<properties>
@@ -33,7 +31,6 @@
 			<artifactId>spring-orm</artifactId>
 			<version>4.1.5.RELEASE</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
@@ -44,11 +41,8 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.37</version>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-dbcp2</artifactId>
-			<version>2.1.1</version>
-		</dependency>
+		<!-- <dependency> <groupId>org.apache.commons</groupId> <artifactId>commons-dbcp2</artifactId> 
+			<version>2.1.1</version> </dependency> -->
 
 	</dependencies>
 </project>
