--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ local.properties
 
 # TeXlipse plugin
 .texlipse
+*.user
+*.suo
+/api/LeadisTeam.LeadisJourney.Api/.vs/config/applicationhost.config
