pgsql to mssql && fixing mapping

--- a/API/LeadisTeam.LeadisJourney.Api/src/LeadisTeam.LeadisJourney.Api/project.json
+++ b/API/LeadisTeam.LeadisJourney.Api/src/LeadisTeam.LeadisJourney.Api/project.json
@@ -26,11 +26,7 @@
     },
 
     "frameworks": {
-        "dnx451": {
-            "dependencies": {
-
-            }
-        }
+        "dnx451": { }
     },
 
     "exclude": [
