--- a/API/LeadisTeam.LeadisJourney.Api/src/LeadisTeam.LeadisJourney.Services/project.json
+++ b/API/LeadisTeam.LeadisJourney.Api/src/LeadisTeam.LeadisJourney.Services/project.json
@@ -1,20 +1,15 @@
 {
-    "version": "1.0.0-*",
+    "version": "1.0.0-alpha",
     "description": "LeadisTeam.LeadisJourney.Services Class Library",
     "authors": [ "Manon" ],
     "tags": [ "" ],
     "projectUrl": "",
     "licenseUrl": "",
+    "dependencies": {
+        "LeadisTeam.LeadisJourney.Core": "1.0.0-*"
+    },
     "frameworks": {
-        "net451": {
-            "dependencies": {
-                "LeadisTeam.LeadisJourney.Core": "1.0.0-*"
-            }
-        },
-        "dnx451": {
-            "dependencies": {
-                "LeadisTeam.LeadisJourney.Core": "1.0.0-*"
-            }
-        }
+        "dnx451": { },
+        "dnxcore50": { }
     }
 }
